Fixed scaling issues when too many shifts were present. Added pagedocumentle to report page

--- a/src/app/_styles/Board.module.css
+++ b/src/app/_styles/Board.module.css
@@ -23,7 +23,7 @@
 
 #labels {
   width: 430px;
-  height: 2%;
+  height: 20px;
   background-color: rgb(10, 117, 193);
   color: white;
   display: grid;
@@ -47,7 +47,7 @@
 .front-end-header {
   display: flex;
   background-color: rgb(217, 217, 217);
-  height: 2%;
+  height: 20px;
   border: 1px solid black;
   font-size: 12px;
   justify-content: center;
